# XBuild

./: CMakeLists.txt  LICENSE  README.md
cmake/: LLVM.cmake
sample/: CMakeLists.txt  LogSample.cpp
xbuild/: CMakeLists.txt
xbuild/include/: Buffer.h  Elf.h  Expr.h  Func.h  IR.h  IRHandle.h  IRMutator.h  IRPrinter.h  IRVisitor.h  IntrusivePtr.h  Module.h  Parameter.h  RefCount.h  llvm.h
xbuild/include/codegen/: ARMCodeGen.h  BaseCodeGen.h  CCodeGen.h  GPUCodeGen.h  GPUDevCodeGen.h  HexagonCodeGen.h  MIPSCodeGen.h  MetalCodeGen.h  OpenCLCodeGen.h  OpenGLCodeGen.h  PTXCodeGen.h  PosixCodeGen.h  Target.h  X86CodeGen.h  X86_64CodeGen.h
xbuild/include/utils/: Logger.h  StringUtil.h
xbuild/src/: Elf.cpp  Expr.cpp  IR.cpp  IRVisitor.cpp
xbuild/src/codegen/: ARMCodeGen.cpp  BaseCodeGen.cpp  GPUCodeGen.cpp  HexagonCodeGen.cpp  MIPSCodeGen.cpp  MetalCodeGen.cpp  OpenCLCodeGen.cpp  OpenGLCodeGen.cpp  PTXCodeGen.cpp  PosixCodeGen.cpp  Target.cpp  X86CodeGen.cpp  X86_64CodeGen.cpp
